# swap-it-open62541-server-template

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  browse_module.html  contact.html  genindex.html  getting_started.html  glossary.html  index.html  informationmodels.html  interpret_conf.html  json.html  module.html  objects.inv  queue.html  register.html  related_projects.html  search.html  searchindex.js  swap-it-architecture.html  swap_server_template.pc.in  ua_swap_it.html  util.html
.github/workflows/: build_and_deploy_documentation.yml  unit_tests.yml  unit_tests_v_1_4_6.yml  unit_tests_w_coverage.yml  unit_tests_w_coverage_v_1_4_6.yml
Information_Models/: CommonModelDesign.csv  CommonModelDesign.xml  SWAP.Fraunhofer.Common.Model.NodeSet2.xml
_sources/: browse_module.rst.txt  getting_started.rst.txt  glossary.rst.txt  index.rst.txt  informationmodels.rst.txt  interpret_conf.rst.txt  json.rst.txt  module.rst.txt  queue.rst.txt  related_projects.rst.txt  ua_swap_it.rst.txt  util.rst.txt
documentation/source/: browse_module.rst  conf.py  contact.rst  glossary.rst  index.rst  informationmodels.rst  interpret_conf.rst  json.rst  module.rst  queue.rst  register.rst  related_projects.rst  ua_swap_it.rst  util.rst
example_server/custom_information_model/: CMakeLists.txt  main.c
tests/: check_server_template.c
tests/InformationModels/: CommonModelDesign.csv  DemoScenarioTypes.ModelDesign.csv  DemoScenarioTypes.ModelDesign.xml  DemoScenarioWarehouse.ModelDesign.csv  DemoScenarioWarehouse.ModelDesign.xml  PatientZeroDataTypesModelDesign.csv  PatientZeroWarehouseModelDesign.csv  SWAP.Fraunhofer.Common.Model.NodeSet2.xml  SWAP.Fraunhofer.Demo.Scenario.Model.NodeSet2.xml  SWAP.Fraunhofer.Demo.Scenario.Model.Types.bsd  SWAP.Fraunhofer.Demo.Scenario.Warehouse.Model.NodeSet2.xml  SWAP.Fraunhofer.Patient.Zero.Model.NodeSet2.xml  SWAP.Fraunhofer.Patient.Zero.Model.Types.bsd  SWAP.Fraunhofer.Patient.Zero.Warehouse.Model.NodeSet2.xml  SWAP.Fraunhofer.Patient.Zero.Warehouse.Model.Types.bsd
tests/cmake/: FindCheck.cmake
tests/coverage_test/: CMakeLists.txt
tests/test_include/: service_callbacks.h
tests/unit_tests/: CMakeLists.txt
